# localforge

./: .dockerignore  .env.example  .env.server  .gitignore  AGENTS.md  BACKLOG.md  DEPLOY_SERVER.md  DEPLOY_TAILSCALE.md  DOCKER_DEPLOY.md  Dockerfile  Makefile  README.md  SERVER_DEPLOY.md  compose.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  nginx.conf  update.sh
apps/backend/: Dockerfile  mock_api.py  pyproject.toml  requirements.txt
apps/backend/app/: decision_logger.py  main.py
apps/backend/tests/: mock_api.py  test_api.py  test_tools.py
apps/frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.css  App.tsx  SideNav.css  index.css  main.tsx
apps/frontend/src/components/: SideNav.tsx  ToolLayout.tsx
apps/frontend/src/lib/: api.ts  clipboard.ts
apps/frontend/src/pages/: BaseConverter.tsx  ClipboardHistory.tsx  CodeTools.tsx  ColorConverter.tsx  ColorPicker.tsx  DataGenerator.tsx  DecisionLogger.tsx  EmojiPicker.tsx  FileConverter.tsx  Home.tsx  HtmlCompiler.tsx  ImageConverter.tsx  LoremIpsumGenerator.tsx  MediaToolkit.tsx  MockApiServer.tsx  NetworkTools.tsx  NotesSnippets.tsx  PaletteGenerator.tsx  PdfToolkit.tsx  QrGenerator.tsx  TextUtilities.tsx  TimestampTools.tsx  TimezoneConverter.tsx
apps/frontend/src/test/: BaseConverter.test.tsx  ColorConverter.test.tsx  ColorPicker.test.tsx  DataGenerator.test.tsx  DecisionLogger.test.tsx  EmojiPicker.test.tsx  LoremIpsumGenerator.test.tsx  MockApiServer.test.tsx  (+2 more)
docs/: decisions.md
