[project]
name = "localforge-backend"
version = "0.1.0"
description = "FastAPI backend for LocalForge"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "pillow==10.4.0",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "pytest==8.3.2",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
